--- a/css/styles.css
+++ b/css/styles.css
@@ -72,20 +72,21 @@ p{
     background-color: var(--bright-red);
     border-radius: 3.125rem;
     border: none;
+    box-shadow: 0px 7px 10px 1px var(--red-shadow);
+    cursor: pointer;
     color: var(--white-general-font);
     font-size: 0.824rem;
     font-weight: 700;
     padding: 0 2rem;
     height: 2.75rem;
     text-decoration: none;
-    box-shadow: 0px 7px 10px 1px var(--red-shadow);
-    cursor: pointer;
+    transition: all 0.4s;
 }
 
 /* Hover button style */
 
 .orange-botton-style:hover{
-    background-color: var(--hover-status-red)
+    background-color: var(--hover-status-red);
 }
 .orange-span-style{
     background-color: var(--bright-red);
@@ -319,11 +320,16 @@ ol {
 .group-links-navigation li{
     list-style-type: none;
     line-height: 2rem;
+    transition: all 0.2s;
 }
 
 .group-links-navigation li:hover{
     color: var(--bright-red);
     cursor: pointer;
+}
+
+.social-icons img{
+    transition: all 0.2s;
 }
 
 .social-icons img:hover{
@@ -400,6 +406,7 @@ ol {
 
     .nav-links-elements-hide li{
         margin: 0 1rem;
+        transition: all 0.2s;
     }
 
     .nav-links-elements-hide li:hover{
